--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
     </div>
     <div class="gallery">
         <div class="galleryItem">
-            <h1 class="galleryTitle">Be Bisthi!</h1>
+            <h1 class="galleryTitle">Be The Future!</h1>
             <img src="https://images.pexels.com/photos/9295809/pexels-photo-9295809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
                 alt="" class="galleryImg">
         </div>
         <div class="galleryItem">
             <img src="https://images.pexels.com/photos/1040427/pexels-photo-1040427.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
                 alt="" class="galleryImg">
-            <h1 class="galleryTitle">This is the First Day of Your New Life</h1>
+            <h1 class="galleryTitle">This is the New Style</h1>
         </div>
         <div class="galleryItem">
             <h1 class="galleryTitle">Just Do it!</h1>
@@ -175,9 +175,9 @@
         <div class="nsItem">
             <h3 class="nsTitleSm">SUMMER NEW ARRIVALS</h3>
             <h1 class="nsTitle">New LIFE</h1>
-            <h1 class="nsTitle">New SON</h1>
+            <h1 class="nsTitle">New BEGINNING</h1>
             <a href="#nav">
-                <button class="nsButton">CHOOSE YOUR WIFE</button>
+                <button class="nsButton">CHOOSE YOUR BRAND</button>
             </a>
         </div>
         <div class="nsItem">
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <h1 class="fMenuTitle">Follow Bisthi!</h1>
+                <h1 class="fMenuTitle">Follow Now!</h1>
                 <div class="fIcons">
                     <img src="./img/facebook.png" alt="" class="fIcon">
                     <img src="./img/twitter.png" alt="" class="fIcon">
@@ -236,7 +236,7 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright">@MySons All rights reserved. 2024.</span>
+                <span class="copyright">@Sam All rights reserved. 2024.</span>
             </div>
         </div>
     </footer>
