--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
         </div>
         <div class="payment">
             <h1 class="payTitle">Personal Information</h1>
-            <label>Wife Name</label>
-            <input type="text" placeholder="Wife" class="payInput">
+            <label>Your Name</label>
+            <input type="text" placeholder="Name" class="payInput">
             <label>Phone Number</label>
             <input type="text" placeholder="100" class="payInput">
             <label>Address</label>
-            <input type="text" placeholder="Pay My Son" class="payInput">
+            <input type="text" placeholder="Pay With Care" class="payInput">
             <h1 class="payTitle">Card Information</h1>
             <div class="cardIcons">
                 <img src="./img/visa.png" width="40" alt="" class="cardIcon">
@@ -174,7 +174,7 @@
         </div>
         <div class="nsItem">
             <h3 class="nsTitleSm">SUMMER NEW ARRIVALS</h3>
-            <h1 class="nsTitle">New LIFE</h1>
+            <h1 class="nsTitle">New STYLE</h1>
             <h1 class="nsTitle">New BEGINNING</h1>
             <a href="#nav">
                 <button class="nsButton">CHOOSE YOUR BRAND</button>
